# JobPrepCards

./: .env  LICENSE  README.md  audio.mp2  main.py  pyproject.toml  requirements.txt
